[project]
name = "kaggle-rent-price"
version = "0.1.0"
description = "Moscow rent price prediction (Kaggle blending notebook)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2",
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "lightgbm>=4.5",
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "tqdm>=4.66",
]
